reign/reign_derive/tests/ui/compile_fail/options_trailing_ident.rs
#![feature(proc_macro_hygiene)]
use reign::prelude::*;

fn test() {
    json!(200, status);
}

fn main() {}
