reign/reign_derive/tests/ui/compile_fail/options_trailing_ident.stderr
error: expected `=`
 --> $DIR/options_trailing_ident.rs:5:5
  |
5 |     json!(200, status);
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
